--- a/package.json
+++ b/package.json
@@ -6,17 +6,25 @@
   "repository": "",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-free": "5.15.3",
+    "@hookform/resolvers": "^2.9.10",
+    "@mui/material": "^5.10.14",
     "@popperjs/core": "2.9.1",
     "@tailwindcss/forms": "^0.5.3",
+    "axios": "^1.1.3",
     "chart.js": "2.9.4",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "next": "10.0.9",
+    "notistack": "^2.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.39.4",
     "react-scripts": "4.0.3",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "next start",
