--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@mui/material": "^5.10.14",
     "@popperjs/core": "2.9.1",
+    "@reduxjs/toolkit": "^1.9.0",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.1.3",
     "chart.js": "2.9.4",
@@ -22,6 +23,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^7.39.4",
+    "react-redux": "^8.0.5",
     "react-scripts": "4.0.3",
     "tailwindcss": "^3.2.4",
     "yup": "^0.32.11"
