--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "typescript": "4.2.3"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19"
   }
