--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@popperjs/core": "2.9.1",
     "@reduxjs/toolkit": "^1.9.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
     "axios": "^1.1.3",
     "chart.js": "2.9.4",
     "gulp": "4.0.2",
@@ -25,6 +27,7 @@
     "react-hook-form": "^7.39.4",
     "react-redux": "^8.0.5",
     "react-scripts": "4.0.3",
+    "request": "2.79.0",
     "tailwindcss": "^3.2.4",
     "yup": "^0.32.11"
   },
@@ -52,7 +55,7 @@
     ]
   },
   "optionalDependencies": {
-    "typescript": "4.2.3"
+    "typescript": "^4.9.3"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
